--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -27,7 +27,7 @@
               </a>
          
            
-              <a routLink="/orders" class="dropdown-item d-flex align-items-center py-2">
+              <a routLink="/Orders" class="dropdown-item d-flex align-items-center py-2">
                 <i class="fa fa-history mr-3"></i> View Orders
               </a>
            
